<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ekyc.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Upload"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"/>-->



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_photo_camera"
        app:layout_constraintBottom_toTopOf="@+id/snackbar_layout"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_passport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_flight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/passport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_fab_menu"
        android:text="@string/passport"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/fab_passport"
        app:layout_constraintTop_toTopOf="@+id/fab_passport"
        app:layout_constraintBottom_toBottomOf="@+id/fab_passport"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_pancard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_pancard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fab_passport"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/pancard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_fab_menu"
        android:text="@string/pan"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/fab_pancard"
        app:layout_constraintTop_toTopOf="@+id/fab_pancard"
        app:layout_constraintBottom_toBottomOf="@+id/fab_pancard"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_aadhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_person"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fab_pancard"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/aadhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_fab_menu"
        android:text="@string/aadhar"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/fab_aadhar"
        app:layout_constraintTop_toTopOf="@+id/fab_aadhar"
        app:layout_constraintBottom_toBottomOf="@+id/fab_aadhar"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
